# RiemannianRF

./: CMakeLists.txt
interface/: BDTTrainer.h  ConcurrencyManager.h  Config.h  CurvatureRegularizer.h  DataLoader.h  Evaluation.h  ManifoldGeometry.h  ModelTrainer.h
macros/: plotCurvature.C
scipts/: plotCurvature.C  plotData.C  plotModelParameters.C
src/: BDTTrainer.cc  ConcurrencyManager.cc  Config.cc  CurvatureRegularizer.cc  DataLoader.cc  Evaluation.cc  ManifoldGeometry.cc  ModelTrainer.cc  main.cc
test/: test_BDTTrainer.cc
